# octocode

./: Cargo.toml  install.sh
src/: config.rs  state.rs
src/mcp/: graphrag.rs  proxy.rs  semantic_code.rs
src/mcp/lsp/: client.rs
