[package]
name = "octocode"
version = "0.11.0"
edition = "2021"
rust-version = "1.82"
authors = ["Muvon Un Limited <opensource@muvon.io>"]
description = "AI-powered code indexer with semantic search, GraphRAG knowledge graphs, and MCP server for multi-language codebases"
homepage = "https://octocode.muvon.io"
repository = "https://github.com/muvon/octocode"
documentation = "https://docs.rs/octocode"
license = "Apache-2.0"
keywords = ["ai", "semantic-search", "code-analysis", "graphrag", "mcp-server"]
categories = ["development-tools", "command-line-utilities", "parsing", "text-processing", "algorithms"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "*.md",
    "install.sh"
]

[lib]
doctest = false  # Disable doctests to avoid feature conflicts on Windows

[features]
default = ["fastembed", "huggingface"]
fastembed = ["octolib/fastembed"]
huggingface = ["octolib/huggingface"]

# Optimized release profile for static linking
[profile.release]
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units for better optimization
panic = "abort"         # Abort on panic for smaller binary size
strip = true            # Strip symbols from binary
opt-level = "z"         # Optimize for size
overflow-checks = true  # Prevent silent integer wrapping (security fix M3)

# Cross-compilation configuration is in .cargo/config.toml

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "process"] }
ignore = "0.4.25"
parking_lot = "0.12.5"
lance-table = { version = "0.39.0", default-features = false, features = [] }
lance = { version = "0.39.0", default-features = false, features = [] }
lancedb = { version = "0.23.1", default-features = false }
arrow = { version = "56.2.0", default-features = false, features = ["prettyprint"] }
arrow-array = { version = "56.2.0", default-features = false }
arrow-schema = { version = "56.2.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock"] }
async-trait = "0.1"
tree-sitter = "0.26.3"
tree-sitter-php = "0.24.2"
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-go = "0.25.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-bash = "0.25.0"
tree-sitter-css = "0.25.0"
tree-sitter-lua = "0.4.1"

uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
tree-sitter-typescript = "0.23.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-svelte-ng = "1.0.2"
reqwest = { version = "0.13.1", features = ["json", "rustls"], default-features = false }
anyhow = "1.0.100"
serde_json = "1.0.145"
sha2 = "0.10.9"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
notify = { version = "8.2.0", default-features = false, features = ["crossbeam-channel", "macos_fsevent"] }
notify-debouncer-mini = "0.7.0"
toml = "0.9.8"
lazy_static = "1.5.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
globset = { version = "0.4.18", default-features = false }
regex = { version = "1.12.2", default-features = false, features = ["std"] }
dirs = "6.0.0"
# EditorConfig parsing and formatting
ec4rs = "1.2.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
# LSP integration dependencies
lsp-types = "0.97.0"
url = "2.5.7"
dotenvy = "0.15"

# Local dependency on octolib with embedding features
# octolib = { path = "../octolib", features = ["fastembed", "huggingface"] }
octolib = { version = "0.10.1", default-features = false }

[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path
